--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,12 @@ version: '3.8'
 
 services:
   backend:
-    build:
-      context: ./backend
+    image: dockerhub-username/backend-app:latest
     ports:
       - "9000:9000"
 
   frontend:
-    build:
-      context: ./frontend
+    image: dockerhub-username/frontend-app:latest
     ports:
       - "8080:8080"
     environment:
