--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-name: CI
+name: CI/CD
+
 on:
   push:
     branches: [main]
@@ -6,16 +7,76 @@ on:
     branches: [main]
 
 jobs:
-  test-frontend:
+  test-and-build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4    
-      - uses: actions/setup-go@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # --- Tests ---
+      - name: Set up Go (frontend)
+        uses: actions/setup-go@v5
         with:
           go-version-file: frontend/go.mod
-      - name: Build
-        working-directory: frontend
-        run: go build ./...    
-      - name: Test
+
+      - name: Test Frontend
         working-directory: frontend
         run: go test ./... -v
+
+      # Only run backend setup/tests if a go.mod exists there
+      - name: Set up Go (backend)
+        if: hashFiles('backend/go.mod') != ''
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: backend/go.mod
+
+      - name: Test Backend
+        if: hashFiles('backend/go.mod') != ''
+        working-directory: backend
+        run: go test ./... -v
+
+      # --- Build & Push (only on push to main) ---
+      - name: Set up Docker Buildx
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Backend
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/simple-fortune-backend:latest
+
+      - name: Build and push Frontend
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/simple-fortune-frontend:latest
+
+  deploy:
+    # only run after test-and-build, and only on pushes to main
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: test-and-build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Pull latest images from Docker Hub
+        run: |
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/simple-fortune-backend:latest
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/simple-fortune-frontend:latest
+          echo "Deployment completed! Images pulled from Docker Hub."
