--- a/backend/backend-deployment.yaml
+++ b/backend/backend-deployment.yaml
@@ -1,19 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-deployment
+  name: backend
   labels:
-    app: backend-deployment
+    app: backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: backend-deployment
+      app: backend
   template:
     metadata:
       labels:
-        app: backend-deployment
+        app: backend
     spec:
       containers:
         - name: backend
-          image: backend-image
+          image: jeeem/backend-app:latest
+          ports:
+            - containerPort: 9000
