--- a/backend/backend-service.yaml
+++ b/backend/backend-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: service
   labels:
     app: backend-service
 spec:
   type: NodePort
   selector:
-    app: backend-service
+    app: backend
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 5000
+      port: 9000
+      targetPort: 9000
