--- a/frontend/frontend-deployment.yaml
+++ b/frontend/frontend-deployment.yaml
@@ -1,10 +1,27 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: frontend
+  labels:
+    app: frontend
 spec:
-  containers:
-  - name: frontend
-    image: frontend-image
-    ports:
-    - containerPort: 8080
+  replicas: 2
+  selector:
+    matchLabels:
+      app: frontend
+  template:
+    metadata:
+      labels:
+        app: frontend
+    spec:
+      containers:
+        - name: frontend
+          image: jeeem/frontend-app:latest
+          ports:
+            - containerPort: 8080
+          env:
+            - name: BACKEND_PORT
+              value: "9000"
+            - name: BACKEND_DNS
+              value: "backend-service"
+
