--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,40 +8,52 @@ permissions:
   packages: write
 
 jobs:
-  build-and-deploy:
+  test-frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: actions/setup-go@v5
         with:
           go-version-file: frontend/go.mod
-      - name: Test Frontend
+
+      - name: Run frontend tests
         working-directory: frontend
         run: go test ./... -v
-      
+
+  test-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/setup-go@v5
         with:
           go-version-file: backend/go.mod
-      - name: Test Backend
+
+      - name: Run backend tests
         working-directory: backend
         run: go test ./... -v
-      
+
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    needs: [test-frontend, test-backend]
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Build and push Backend
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/simple-fortune-backend:latest
-      
+
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/simple-fortune-frontend:latest
-      
-     
+
       - name: Deploy
         run: |
           docker pull ghcr.io/${{ github.repository_owner }}/simple-fortune-backend:latest
